--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git & GitHub</title>
 </head>
 <body>
-    <h1>Hello, welcome to the new branch "Ahmdy22"<bdi></bdi></h1>
+    <h1>Hello, welcome to the initial project<bdi></bdi></h1>
+<!--     <h1>Hello, welcome to the new branch "Ahmdy22"<bdi></bdi></h1> -->
 </body>
 </html>
