--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git & GitHub</title>
 </head>
+
 <body>
     <h1>Hello, welcome to the initial project<bdi></bdi></h1>
-<!--     <h1>Hello, welcome to the new branch "Ahmdy22"<bdi></bdi></h1> -->
+    <!--     <h1>Hello, welcome to the Main branch "master"</h1> -->
+    <!--     <h2>Hello, welcome to the new branch "Ahmdy"</h2> -->
+
 </body>
+
 </html>
